[gd_scene load_steps=14 format=3 uid="uid://bikg20lmcmbxl"]

[ext_resource type="Texture2D" uid="uid://dufhii16cqsxg" path="res://assets/Sprites.png" id="1_0e48y"]
[ext_resource type="Script" uid="uid://d3v2fcihyutup" path="res://src/game_area.gd" id="2_epypp"]
[ext_resource type="Texture2D" uid="uid://dhnmcc1cfk7fg" path="res://assets/game_background.png" id="2_q6r6c"]
[ext_resource type="PackedScene" uid="uid://c402oau8vvnxb" path="res://block.tscn" id="2_ryrav"]
[ext_resource type="Script" uid="uid://dhfrqymt8a10o" path="res://src/game_manager.gd" id="3_epypp"]
[ext_resource type="Texture2D" uid="uid://b12emrlwvbjte" path="res://assets/opcion_3.png" id="6_eow3j"]
[ext_resource type="FontFile" uid="uid://ba4wb48gr6auk" path="res://assets/font/GochiHand-Regular.ttf" id="6_ryrav"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rj586"]
atlas = ExtResource("1_0e48y")
region = Rect2(852, 0, 213, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryrav"]
atlas = ExtResource("1_0e48y")
region = Rect2(852, 0, 213, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_eow3j"]
atlas = ExtResource("1_0e48y")
region = Rect2(0, 0, 213, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5wjh"]
atlas = ExtResource("1_0e48y")
region = Rect2(1065, 0, 213, 288)

[sub_resource type="SpriteFrames" id="SpriteFrames_ir8iy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj586")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_ryrav")
}, {
"duration": 1.8,
"texture": SubResource("AtlasTexture_eow3j")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_j5wjh")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_ryrav")
}],
"loop": false,
"name": &"nam",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_eow3j"]
font = ExtResource("6_ryrav")
font_size = 54
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 22
shadow_color = Color(0, 0, 0, 0.329412)
shadow_offset = Vector2(0.51, 1)

[node name="game" type="Node2D" node_paths=PackedStringArray("ref_grid_manager", "ref_next_block_pos", "ref_nam_sprite")]
script = ExtResource("3_epypp")
ref_grid_manager = NodePath("GridManager")
ref_block_scene = ExtResource("2_ryrav")
ref_next_block_pos = NodePath("NextBlock")
ref_nam_sprite = NodePath("ham")
gravity_interval = 0.522

[node name="NextBlock" type="Marker2D" parent="."]
position = Vector2(374, 142)
gizmo_extents = 61.6

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="Control" type="Control" parent="Background"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Background"]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("2_q6r6c")
expand_mode = 1

[node name="ham" type="AnimatedSprite2D" parent="."]
position = Vector2(1001, 302)
scale = Vector2(0.937206, 0.937206)
sprite_frames = SubResource("SpriteFrames_ir8iy")
autoplay = "default"

[node name="GridManager" type="Node2D" parent="." node_paths=PackedStringArray("bottom_left", "top_right", "cell_top_right")]
script = ExtResource("2_epypp")
bottom_left = NodePath("bottomLeftLimit")
top_right = NodePath("topRightLimit")
cell_top_right = NodePath("cellToprightLimit")
sprite_texture = ExtResource("6_eow3j")

[node name="topRightLimit" type="Marker2D" parent="GridManager"]
position = Vector2(558, 69)
gizmo_extents = 316.3

[node name="bottomLeftLimit" type="Marker2D" parent="GridManager"]
position = Vector2(167, 629)
gizmo_extents = 316.3

[node name="cellToprightLimit" type="Marker2D" parent="GridManager"]
position = Vector2(230, 560)
gizmo_extents = 316.3

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 837.0
offset_top = 516.0
offset_right = 1051.0
offset_bottom = 581.0
scale = Vector2(1.12904, 1.45205)
text = "0"
label_settings = SubResource("LabelSettings_eow3j")
horizontal_alignment = 2
vertical_alignment = 1
